# TopSpinCorrelations

./: README.md  TUnfoldSystList.txt  TUnfoldVariablesList.txt
AEPS/: calculate_parameters.py
configs/: config_run2_13tev_25ns_2016ULpostVFP_106X.txt  config_run2_13tev_25ns_2016ULpreVFP_106X.txt  config_run2_13tev_25ns_2017UL_106X.txt  config_run2_13tev_25ns_2018UL_106X.txt  config_run2_13tev_25ns_Full2016_80X.txt  config_run2_13tev_25ns_Full2016_94X.txt  config_run2_13tev_25ns_Full2017_94X.txt  config_run2_13tev_25ns_Full2017_94X_Purdue_Backup.txt  config_run2_13tev_25ns_Full2018_102X.txt  config_run2_13tev_25ns_template.txt
data/input_data_names/: selectionList_2016.txt  selectionList_2016postVFP.txt  selectionList_2016preVFP.txt  selectionList_2017.txt  selectionList_2018.txt
data/unfoldingHistos_names/: TUnfoldHistoFileList_Nominal_combined.txt  TUnfoldHistoFileList_Nominal_ee.txt  TUnfoldHistoFileList_Nominal_emu.txt  TUnfoldHistoFileList_Nominal_emu_min.txt  TUnfoldHistoFileList_Nominal_mumu.txt
include/: AnalysisConfig.h  AnalyzerBaseClass.h  AnalyzerBoostedTop.h  AnalyzerControlPlots.h  AnalyzerDoubleDiffXS.h  AnalyzerGenObjs.h  AnalyzerKinReco.h  AnalyzerKinRecoQualityStudies.h  AnalyzerLooseKinReco.h  AnalyzerSpinCorr.h  GlobalScaleFactors.h  LuminosityScaleFactors.h  MatrixUnf.h  MatrixUnfControl.h  MiniTree.h  MiniTreeAnalyzer.h  MiniTreeAppender.h  MiniTreeHelpers.h  MiniTreeReader.h  MiniTreeTopAnalysis.h  Output.h  PlotterCP.h  PlotterConfigurationHelper.h  PlotterDiffXSec.h  PlotterForTUnfold.h  Sample.h  Samples.h  TopAnalysis.h  TopAnalysisPlain.h  TopAnalysisSpinVars.h  TreeHandlerBase.h  TreeHandlerSpinCorr.h  TreeHandlerTTBarPlain.h  TreePlain.h  UnfoldingClosureTestsHandler.h  UnfoldingIOHandler.h  UnfoldingXSecHandler.h  UsefulTools13TeV.h  VariablesBase.h  VariablesBoostedTop.h  (+25 more)
scripts/: CalcLumi.sh  CalculateBTagEff.py  Compute_correlation_matrix.py  Linearity_summary.C  LoadAnalysis_SpinCorr_Nominal_Data_2016ULpostVFP.sh  LoadAnalysis_SpinCorr_Nominal_Data_2016ULpreVFP.sh  LoadAnalysis_SpinCorr_Nominal_Data_2017UL.sh  LoadAnalysis_SpinCorr_Nominal_Data_2018UL.sh  LoadTUnfoldHist.sh  MakeHistoArrays.py  MkCoffeaStandySlurmJobs.py  MkCoffeacmsSlurmJobs.py  MkCondorScriptsBTagEff.C  MkCondorScriptsBTagEff_2017.C  MkCondorScriptsNominalParallel.C  MkCondorScriptsNominalParallel_2017.C  MkCondorScriptsNominalVariations.C  MkCondorScriptsTUnfoldHisto.C  MkCondorScriptsTheoryVariations.C  MkDatacards.py  MkDatacards_2016old.py  MkFileLists.py  MkHistoListControl.py  MkKinRecoResolutions.py  MkLoadAnalysisScripts.py  MkLoadTUnfoldHistoScriptsAndTUnfoldFileLists.py  MkLumiWeightedUnfoldingHistos.py  MkPlotsSlurmJobs.py  MkResubmitJobs.py  MkResubmitJobs_fromlogs.py  MkStandbySlurmJobs.py  MkTUnfoldHistoFileLists.py  MkTUnfoldHistoFileLists_Lumiweighted.py  MkTriggerEffHaddScripts.py  MkUnfoldingHistosHaddScripts.py  MkUnfoldingHistosLumiweightedHaddScripts.py  MkUnfoldingScriptPerVar.py  MkcmsSlurmJobs.py  MkselectionRootHaddScripts.py  PreparePDFs_Observables.sh  (+33 more)
src/: Abraham_makeTUnfold.cc  AnalysisConfig.cc  AnalyzerBaseClass.cc  AnalyzerBoostedTop.cc  AnalyzerControlPlots.cc  AnalyzerDoubleDiffXS.cc  AnalyzerGenObjs.cc  AnalyzerKinReco.cc  AnalyzerKinRecoQualityStudies.cc  AnalyzerLooseKinReco.cc  AnalyzerSpinCorr.cc  CMakeLists.txt  DilepSVDFunctions.cc  DyScaleFactors.cc  EffHist.cc  FinalPlot.cc  GlobalScaleFactors.cc  Histo13TeV.cc  Histo2.cc  KinRecoResolutions.cc  KinRecoResolutions_Plots.cc  LuminosityScaleFactors.cc  MatrixUnf.cc  MatrixUnfControl.cc  MiniTree.cc  MiniTreeAnalyzer.cc  MiniTreeAppender.cc  MiniTreeHelpers.cc  MiniTreeReader.cc  MiniTreeTopAnalysis.cc  Output.cc  Plotter.cc  PlotterBTop.cc  PlotterCP.cc  PlotterConfigurationHelper.cc  PlotterDiffXSec.cc  PlotterForTUnfold.cc  Sample.cc  SampleDefinitions.cc  Samples.cc  (+39 more)
